# que-vino-backend

./: .dockerignore  .gitignore  AGENTS.md  GEMINI.md  OPENCLAW_TOOLS.md  README.md  knowledge_api_test_results.txt  setup_bq.py  test_knowledge_api.py
.agent/rules/: specify-rules.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
apis/audio/: Dockerfile  README.md  config.py  main.py  manual_run.py  mcp_server.py  pyproject.toml
apis/audio/core/: auth_middleware.py  db.py  exceptions.py  logger.py
apis/audio/deploy/: cloudbuild.yaml
apis/audio/prompts/: elevenlabs_enrichment.md  google_enrichment.md
apis/audio/schemas/: bq_models.py
apis/audio/services/: audio_service.py  gcs_service.py  gemini_service.py
apis/audio/services/providers/: base.py  elevenlabs.py  google_tts.py
apis/audio/tests/: TEST_RESULTS.md  test_audit.py  test_production.py  verify_elevenlabs.py
apis/knowledge_stores/: README.md  config.py  main.py  mcp_server.py  pyproject.toml
apis/knowledge_stores/core/: auth_middleware.py  db.py  gcs_client.py  gemini_client.py
apis/knowledge_stores/deploy/: cloudbuild.yaml
apis/knowledge_stores/schemas/: api_models.py  bq_schemas.py
apis/knowledge_stores/services/: sync_service.py
apis/knowledge_stores/tests/: TEST_RESULTS.md  test_main.py  test_production.py
apis/locations/: README.md  config.py  main.py  mcp_server.py  pyproject.toml
apis/locations/core/: auth_middleware.py  rate_limit.py
apis/locations/database/: insert_locations.sql
apis/locations/deploy/: Dockerfile  cloudbuild.yaml
apis/locations/schemas/: api_models.py  locations.py  users.py
apis/locations/tests/: test_locations.py  test_mcp_security.py
apis/stores/: README.md  main.py  mcp_server.py  pyproject.toml
apis/stores/core/: db.py  rate_limit.py
apis/stores/deploy/: Dockerfile  cloudbuild.yaml
apis/stores/schemas/: api_models.py  stores.py  users.py
apis/stores/tests/: test_auth.py  test_mcp_security.py  test_stores_mutations.py  test_stores_queries.py
setup/: setup_bq.py
specs/001-auth-stores-locations/: data-model.md  plan.md  quickstart.md  research.md  spec-001.md  tasks.md
specs/002-rag-knowledge-base/: data-model.md  plan.md  quickstart.md  research.md  spec-002.md  tasks.md
specs/003-audio-generation-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+5 files in other folders)
